[package]
name = "hyper-trust-dns-connector"
version = "0.2.0"
authors = ["Paul Le Grand Des Cloizeaux <@paullgdc>"]
edition = "2018"
description = "A compatibility crate to use trust-dns-resolver asynchronously with hyper client, instead the default dns threadpool"
repository = "https://github.com/paullgdc/hyper-trust-dns-connector"
readme = "README.md"
license = "MIT"
keywords = ["resolver", "hyper", "trust-dns", "webclient", "async"]
categories = ["asynchronous", "web-programming::http-client", "network-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
trust-dns-resolver = "0.19"
hyper = { version = "0.13", features = ["tcp"] }
hyper-tls = { version = "0.4", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
tokio = {version = "0.2", features = ["macros", "rt-core"]}

[features]
default = []
hyper-tls-connector = ["hyper-tls", "native-tls"]

[badges]
maintenance = { status = "passively-maintained" }

