[package]
name = "hyper-trust-dns-connector"
version = "0.3.0"
authors = ["Paul Le Grand Des Cloizeaux <@paullgdc>"]
edition = "2018"
description = "A compatibility crate to use trust-dns-resolver asynchronously with hyper client, instead the default dns threadpool"
repository = "https://github.com/paullgdc/hyper-trust-dns-connector"
readme = "README.md"
license = "MIT"
keywords = ["resolver", "hyper", "trust-dns", "webclient", "async"]
categories = ["asynchronous", "web-programming::http-client", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
trust-dns-resolver = "0.21"
hyper = { version = "0.14", features = ["tcp", "client"] }
hyper-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
linked-hash-map = "0.5.3"

[dev-dependencies]
tokio = {version = "1.0.2", features = ["macros", "rt"]}
hyper = { features = ["http1"] }

[features]
default = []
hyper-tls-connector = ["hyper-tls", "native-tls"]

[badges]
maintenance = { status = "passively-maintained" }

