[package]
name = "hyper-trust-dns-connector"
version = "0.5.0"
authors = ["Paul Le Grand Des Cloizeaux <@paullgdc>"]
edition = "2018"
description = "A compatibility crate to use hickory-dns asynchronously with hyper client, instead the default dns threadpool"
repository = "https://github.com/paullgdc/hyper-trust-dns-connector"
readme = "README.md"
license = "MIT"
keywords = ["resolver", "hyper", "trust-dns", "hickory-dns", "async"]
categories = ["asynchronous", "web-programming::http-client", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hickory-resolver = "0.24"
hyper = { version = "0.14", features = ["tcp", "client"] }
hyper-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
# We depend on this crate indirectly.
# This is pinned to >=0.5.3 because it contains UBs for lower versions
# See https://github.com/contain-rs/lru-cache/issues/50
linked-hash-map = "0.5.3"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["macros", "rt"] }
hyper = { version = "0.14", features = ["http1"] }

[features]
default = []
hyper-tls-connector = ["hyper-tls", "native-tls"]

[badges]
maintenance = { status = "passively-maintained" }

